@startuml
left to right direction

abstract class BasePizza {
    #String name
    +void setName(String name)
    +{abstract} void prepare()
    +void bake()
    +void cut()
    +void box()
}

class CheesePizza {}
BasePizza <|-- CheesePizza

class GreekPizza {}
BasePizza <|-- GreekPizza

class OrderPizza1 {}
class OrderPizza2 {}

class SimpleFactory {}
OrderPizza1 o-- SimpleFactory
OrderPizza2 ..> SimpleFactory
@enduml
